Fix column wrap (prefer that it needs scrolling horizontally) (#1609)

--- a/src/web/static/css/user.css
+++ b/src/web/static/css/user.css
@@ -10,6 +10,10 @@
 ###########################################################
 */
 
+.screen-set-row {
+    flex-wrap: nowrap;
+}
+
 .user-screen-content {
     --font-size: 100;
     font-size: calc(var(--font-size) * 1%)
